feat: init api service repository model kategori
